public/static/infoscreen.css
html {
	font-family: Sans-Serif;
}

div.displayclean {
	background-color:#F8F8F8;
	position:absolute;
	top: 0;
	left: 0;
	border-width:1px 2px;
	width:100%;
}

div.displayclean > ul {
	position:absolute;
	width:100%;

	list-style-type:none;
	margin:0;
	padding:0;
}

div.displayclean > ul > li {
	height: 7em;
	display:block;
	border-bottom: 1px solid #999999;
	width:100%;
	position:relative;
}

div.displayclean li .line {
	background-color: #eeeeee;
	border-radius: 5px;
	font-weight:bold;
	font-size: 2.9em;
	padding:3px 8px 2px 5px;
	position:absolute;
	bottom:5px;
	left:2px;
}

div.displayclean li .tram {
	background-color:#ffcccc;
}

div.displayclean li .sbahn {
	background-color:#aaffba;
	-webkit-border-radius: 30px;
	-moz-border-radius: 30px;
	border-radius: 30px;
}

div.displayclean li .ubahn {
	background-color:#aac0ff;
}

div.displayclean li .bus {
	background-color:#eeaaee;
	-webkit-border-radius: 10px;
	-moz-border-radius: 10px;
	border-radius: 10px;
}

div.displayclean li .route {
	color:#444444;
	font-size:2.1em;
	position:absolute;
	top:5px;
	left:4.8em;
	height:1em;
	width: 70%;
	overflow: hidden;
}

div.displayclean li .dest {
	color:#000000;
	font-size:4em;
	position:absolute;
	top:0.65em;
	left:2.5em;
	bottom:-0.1em;
	width: 70%;
	z-index: 1;
	overflow: hidden;
}

div.displayclean li.cancelled {
	background-color: #ffe7d0;
}

div.displayclean li .countdown {
	color:#000000;
	font-size:3em;
	position:absolute;
	right:5px;
	bottom:2px;
}

div.displayclean li .header {
	color:#000000;
	font-size:2em;
	font-weight:bold;
	padding-top:8px;
	border-width-top:0;
	display:block;
	text-align:center;
}

div.displayclean li .head {
	border-bottom-width:0;
}

div.displayclean li .countdown .delay {
	font-size: 1em;
	color:#FF0000;
	padding-right:7px;
}

div.displayclean li > .time {
	color:#444444;
	font-size: 2.4em;
	position:absolute;
	right:5px;
	top:5px;
}

div.displayclean li > .time > .platform {
	color: black;
	margin-left: 0.2em;
}

div.displayclean li .moreinfo {
	color:#000000;
	font-size:2.1em;
	position:fixed;
	top:0em;
	left:0em;
	right:0em;
	bottom:0em;
	background-color: white;
	z-index: 5;
	display: none;
	overflow: auto;
}

div.displayclean li .collapsed-moreinfo {
	display: none;
}

div.displayclean li .expanded-moreinfo {
	display: block;
}

div.displayclean li .moreinfo .mheader {
	text-align: center;
	font-size: 120%;
	padding-top: 0.5em;
	padding-bottom: 0.5em;
	padding-left: 1em;
	padding-right: 1em;
	border-bottom: 0.1em dashed #cccccc;
}

div.displayclean li .moreinfo .mfooter {
	padding-top: 1em;
	padding-left: 1em;
	padding-right: 1em;
}

div.displayclean li .moreinfo tr.routepre {
	background-color: #dddddd;
}
div.displayclean li .moreinfo tr.routenow {
	background-color: #eeeeee;
}
div.displayclean li .moreinfo tr.routepost {
}

div.displayclean li .moreinfo td.time {
	text-align: center;
	margin-right: 0.5em;
}

div.displayclean li .moreinfo .mroute {
	margin-bottom: 0.6em
}

div.displayclean li .moreinfo .mroute .separator {
	color: #999999;
}

div.displayclean li .moreinfo .mroute .important-stop {
	color: #000000;
}

div.displayclean li .moreinfo .mroute .generic-stop {
	color: #555555;
}

div.about {
	font-family: Sans-Serif;
	color: #666666;
}

div.about a {
	color: #000066;
	text-decoration: none;
}

div.error {
	font-size: 150%;
	font-weight: bold;
	color: #ee0000;
}

pre {
	margin-bottom: 2em;
}

span.optional,
span.notes {
	color: #666666;
}

div.break {
	height: 1em;
}

div.field {
	width: 100%;
	clear: both;
}

div.field div.desc {
	float: left;
	width: 14em;
	text-align: right;
	padding-right: 0.5em;
}

input, select {
	border: 1px solid black;
}

div.notes {
	margin-top: 4em;
}

div.notes ul {
	margin-top: 1em;
}

